# rlm-prototipo

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: prd.md  references.md
scripts/: benchmark_strategies.sh  fetch_arxiv.py
src/rlm/: config.py  llm.py  main.py  orchestrator.py  python_env.py  utils.py
tests/: test_config.py  test_orchestrator.py  test_python_env.py  test_utils.py
